some style fixes

--- a/src/index.html
+++ b/src/index.html
@@ -71,13 +71,13 @@
               <h2 class='title right'><span class='first'>A</span>bout <span class='second'>u</span>s</h2>
               <p>We're the organizers of <a href='https://www.meetup.com/Monadic-Warsaw/' target='_blank'>Monadic Warsaw</a>, Ewa Kruzynska and <a href='https://twitter.com/monad_cat' target='_blank'>Michal Kawalec</a>. With over five hundred members it grew up to be one of the biggest Haskell meetups in Europe. We've had speakers and visitors from all over the world and we also host a <a href='https://www.youtube.com/channel/UCCeiYYR2fCXarkfSqqFBwuA' target='_blank'>YouTube channel</a>. It is our way of popularizing functional programming and building a community of interested people. We are sure the summer school will give us as much fun as Monadic Warsaw.
               </p>
-              <h2 class='title left'><span class='first'>S</span>cholarship</h2>
+              <h2 class='title left'><span class='first'>S</span>cholarship <span class='second'>P</span>rogramme</h2>
 
-              <p>We will hold the summer school at <a href='https://goo.gl/maps/DMHV2GN2Nk12' target='_blank'>Mlynska 12</a>, Poznan, Poland. The venue is in the Old Town, a walking distance from a town square. We would love to help you with choosing a place to stay. If you have any questions, please email us at <a href='mailto:team@monadic.party'>team@monadic.party</a>.</p>
+              <p>We are deligted to offer a means based scholarship programme. If you are financially unable to attend the summer school, we have a number of fully funded places available. Everything needed for you to attend is covered - travel to the event, accommodation and the ticket itself. The scholarships are provided by <a target='_blank' href='https://x-team.com'>X-Team</a></p>
+            <h4>
+                <a class="button button-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSe33Vjdye8o8XVqC_varG5BzqM0T1Sa5J1-oqogVDSRUhRtJg/viewform" target='_blank'>Apply for a scholarship</a>
+            </h4>
 
-              <p>In terms of travel, <a href='https://wizzair.com' target='_blank'>WizzAir</a>, <a href='https://www.ryanair.com/gb/en/' target='_blank'>Ryanair</a>, <a href='https://www.lufthansa.com/uk/en/Homepage' target='_blank'>Lufthansa</a> and <a href='http://www.lot.com/gb/en' target='_blank'>LOT</a> all have a dense network of daily connections to and from the city. If you want to save some carbon dioxide, there are frequent train connections from Germany and inside Poland. Buses are also a good budget option with <a href='http://www.polskibus.com/en/index.htm' target='_blank'>PolskiBus</a> which operates a lot of routes in the region.</p>
-
-              <p>Inside the city of Poznan there is a good <a href='http://www.ztm.poznan.pl/en/#planner' target='_blank'>public transporation system</a> with a dense network throughout the city.</p>
           </div>
       </div>
 
@@ -139,59 +139,53 @@ blockchain technology.
 
     <div class='topics'>
       <div class='container'>
-        <h1>=&lt;&lt; Topics &gt;&gt;=</h1>
+        <h1>=&lt;&lt; Talks &gt;&gt;=</h1>
         <div class='row'>
             <div class='col-4 column'>
-                <h3 class='name'><span class='first'>J</span>ulie <span class='second'>M</span>oronuki</h3>
+                <h3 class='name'><span class='first'>M</span>arcin <span class='second'>S</span>zamotulski</h3>
+                <h4>A Category Theory course</h4>
                 <div class='bio'>
-                    Julie Moronuki is one of the authors of <a href='http://haskellbook.com/' target='_blank'>Haskell Programming from First Principles</a>. She has a master's degree in linguistics and taught English, English as a second language, philosophy, linguistics, and medical transcription for over ten years. When she is not writing Haskell, writing about Haskell, or teaching Haskell at a local meetups, she homeschools her two children, pickles everything in sight, and adopts too many pets.
+We will present an introduction to Category Theory for a Haskell
+programmer.  We will introduce basic notions of category theory together
+with their counterparts in Haskell.  We will try to fill the course with
+interesting and useful examples taken from both worlds: of pure
+mathematics and Haskell.  We will introduce the notions of category
+theory, functors and natural transformations, universal properties and
+adjoint functors.  We will consider initial objects, and the notion of
+freeness.  If time permits we will show how initial F-algebras give rise
+to recursive schemes in an elegant an elementary way and how GADTs can
+be constructed via Yoneda Lemma.
                 </div>
             </div>
+
             <div class='col-4 column'>
 
                 <h3 class='name'><span class='first'>C</span>hris <span class='second'>M</span>artin</h3>
+                <h4>Deploying Haskell to the Cloud</h4>
                 <div class='bio'>
-                  I want people to walk away feeling confident that they're capable of deploying Haskell apps to a server. So in the first half or so we'll install nix, use nix-deploy to get a demo app running, and learn enough about nix to get a sense of what's going on. And in the second half I'd like to iterate on that with some project; for that part, I'm not sure what the specific subject should be yet.
+                  I want people to walk away feeling confident that they're capable of deploying Haskell apps to a server. So in the first half or so we'll install nix, use nix-deploy to get a demo app running, and learn enough about nix to get a sense of what's going on. In the second half I'd like to iterate on that with a real life project project.
                 </div>
             </div>
-            <div class='col-4 column'>
 
-                <h3 class='name'><span class='first'>K</span>rzysztof <span class='second'>G</span>ogolewski</h3>
-                <div class='bio'>
-                    Haskell user since 2008, currently software engineer at <a href='https://codility.com/' target='_blank'>Codility</a>. Studied mathematics and computer science and University of Warsaw and Ecole Polytechnique. Enjoys finding bugs in GHC.
-                </div>
-            </div>
-        </div>
-        <div class='row'>
-            <div class='col-4 column'>
-
-                <h3 class='name'><span class='first'>C</span>arter <span class='second'>S</span>chonwald</h3>
-                <div class='bio'>
-                    Hello! I’m Carter Schonwald, a computer scientist. Right now I’m collecting novel algorithmic and mathematical problems in their native industrial habitat, they’re quite fun to spot in their natural unformalized state. Later I think I shall climb back into my tower and analyze them in the laboratory.
-                </div>
-            </div>
-            <div class='col-4 column'>
-
-                <h3 class='name'><span class='first'>M</span>arcin <span class='second'>S</span>zamotulski</h3>
-                <div class='bio'>
-Marcin is a mathematician and a functional programmer.  He did research in
-Abstract Algebra and Category theory in the crossroads of Galois theory.
-He also did research in Game Theory.  He has been programming in various
-languages and paradigms: from C and Python, to PureScript and Haskell,
-and logic programming.  Currently he is working for <a href='https://iohk.io/' target='_blank'>IOHK</a> on the
-blockchain technology.
-                </div>
-            </div>
             <div class='col-4 column'>
 
                 <h3 class='name'><span class='first'>M</span>ichał <span class='second'>K</span>awalec</h3>
+                <h4>Web development with Servant and ReasonML</h4>
                 <div class='bio'>
-                  Michał is an engineer of many trades. He works at <a href='https://x-team.com/' target='_blank'>X-Team</a> where he is responsible for libraries and architecture of League of Legends, and, previously he had worked with startups, supercomputers, and particle detectors. At nights, he writes Haskell libraries and runs the biggest Haskell Meetup in Poland. Talk to him about riding on two wheels ;)
+                    Haskell specifically and functional programming in general brings many promises to the table in web development. In this series of workshops and lectures I will present how reliable and fun it can be. We will write servers with Servant and interfaces in ReasonML. The intention is for attendees to leave with enough knowledge to easily write common web services in a typesafe manner. On the frontend side we will learn how ReasonML can help with creating robust interfaces we can rely on and reason about.<br /><br />
+
+                    This tutorial assumes a basic familiarity with web development in any technology and an intermediate knowledge of Haskell.
                 </div>
             </div>
+
         </div>
+
+        <div class='timer'>
+            <h3>Next announcement in: <span class='countdown'></span></h3>
+        </div>
+
+      </div>
     </div>
-</div>
 
     <div class='call-for-speakers'>
         <div class='container'>
@@ -214,17 +208,28 @@ blockchain technology.
         <div class='container'>
           <h1>=&lt;&lt; Partners &gt;&gt;=</h1>
           <div class='row'>
+
             <div class='col-4 column'>
-              <a href='https://www.janestreet.com/' target='_blank'><img src='JaneStreetLogo.png' /></a>
+              <a href='https://afp-2017.github.io/' target='_blank'>
+                  <img class='square' src='utreht.png' />
+              </a>
             </div>
+
             <div class='col-4 column'>
-              <a href='https://afp-2017.github.io/' target='_blank'><img src='utreht.png' /></a>
+              <a href='https://www.janestreet.com/' target='_blank'>
+                  <img src='JaneStreetLogo.png' />
+              </a>
             </div>
-                <div class='col-4 column'>
-                  <a href='https://x-team.com/' target='_blank'><img src='x-team.png' /></a>
-                </div>
+
+            <div class='col-4 column'>
+              <a href='https://x-team.com/' target='_blank'>
+                   <img class='square' src='x-team.png' />
+              </a>
             </div>
+
+          </div>
         </div>
+    </div>
 
 
     <div class='sign-up'>
