default countdown value

--- a/src/index.html
+++ b/src/index.html
@@ -181,7 +181,7 @@ be constructed via Yoneda Lemma.
         </div>
 
         <div class='timer'>
-            <h3>Next announcement in: <span class='countdown'></span></h3>
+            <h3>Next announcement in: <span class='countdown'>15 days</span></h3>
         </div>
 
       </div>
