added julies abstract

--- a/src/index.html
+++ b/src/index.html
@@ -179,6 +179,16 @@ be constructed via Yoneda Lemma.
             </div>
 
         </div>
+        
+        <div class='row'>
+            <div class='col-4 column'>
+                <h3 class='name'><span class='first'>J</span>ulie <span class='second'>M</span>oronuki</h3>
+                <h4>A Gentle Introduction to Profunctors</h4>
+                <div class='bio'>
+                    Over the course of the week, we'll work on gaining a deep understanding of Haskell's type and typeclass system and how they allow us to think about code algebraically. We'll explore functors in great detail, coming to understand the similarities and differences of the most important functors, ending with a look at contravariant functors, profunctors, and how profunctors are used to great effect in the SQL-generating library, `opaleye.`
+                </div>
+            </div>
+        </div>
 
         <div class='timer'>
             <h3>Next announcement in: <span class='countdown'>15 days</span></h3>
