--- a/src/index.html
+++ b/src/index.html
@@ -189,6 +189,17 @@ be constructed via Yoneda Lemma.
                 </div>
             </div>
         </div>
+        
+        <div class='row'>
+            <div class='col-4 column'>
+                <h3 class='name'><span class='first'>K</span>rzysztof <span class='second'>G</span>ogolewski</h3>
+                <h4>An Introduction to Dependent Types</h4>
+                <div class='bio'>
+                    This will be a gentle conceptual introduction to dependent types. I'll cover motivation, how well-known constructions generalize to dependent types, using types to guide program writing, dependent pattern matching, constructivism and the law of excluded middle, code examples where dependent types fit well.
+The tutorial assumes intermediate familiarity with Haskell, but otherwise requires no background about type systems.
+                </div>
+            </div>
+        </div>
 
         <div class='timer'>
             <h3>Next announcement in: <span class='countdown'>15 days</span></h3>
