--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@monadic_waw" />
+    <meta property="og:image" content="https://monadic.party/logo.png" />
 
     <title>Monadic Party</title>
     <link rel="stylesheet" href="/main.css">
