--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@monadic_waw" />
     <meta property="og:image" content="https://monadic.party/logo.png" />
+    <meta property="og:locale" content="en_US" />
+
+    <meta http-equiv="Cache-Control" content="no-cache"/>
 
     <title>Monadic Party</title>
     <link rel="stylesheet" href="/main.css">
@@ -34,6 +37,8 @@
         <h1>Haskell Summer School</h1>
         <h3>=&lt;&lt;  Monadic Party &gt;&gt;=</h3>
 
+        <h3 class='promo'>Five days of Haskell nerding. Lunch included. Bring your laptop</h3>
+
         <div class='row'>
             <div class='col-3 item'>
                 <a scroll-to='.about-us'>About the event</a>
@@ -42,7 +47,7 @@
                 <a scroll-to='.speakers'>Speakers</a>
             </div>
             <div class='col-3 item'>
-                <a scroll-to='.call-for-speakers'>Call for Speakers</a>
+                <a href='#schedule'>Schedule</a>
             </div>
             <div class='col-3 item'>
                 <a scroll-to='.sign-up'>Sign up</a>
@@ -180,7 +185,7 @@ be constructed via Yoneda Lemma.
             </div>
 
         </div>
-        
+
         <div class='row'>
             <div class='col-4 column'>
                 <h3 class='name'><span class='first'>J</span>ulie <span class='second'>M</span>oronuki</h3>
@@ -207,21 +212,192 @@ The tutorial assumes intermediate familiarity with Haskell, but otherwise requir
       </div>
     </div>
 
-    <div class='call-for-speakers'>
+    <div id='schedule'>
         <div class='container'>
-            <h1>=&lt;&lt; Call for speakers &gt;&gt;=</h1>
-            <h4>Deadline: 28th of February 2018</h4>
+            <h1>=&lt;&lt; Schedule &gt;&gt;=</h1>
 
-            <p>Do you want to lead workshops at the summer school? We would love to invite you to be a speaker at our event.</p>
+            <div class='row'>
+              <h3 class='day-name'>Monday</h3>
 
-            <p>We are looking for people interested in leading workshops spanning four to six slots on various topics in the Haskell ecosystem. Slots take fifty minutes and can be allocated together or spread over a couple days, depending on your preference. We will have two tracks, a beginners one that caters to programmers that have limited Haskell experience and advanced for people who are comfortable with the language and want to learn new concepts.</p>
+              <div class='col-6 day'>
+                <h4>Beginners track</h4>
+                <div class='slot'>
+                  <time>10 - 11</time>
+                  <div class='topic'>
+                    <div class='name'>Julie Moronuki</div>
+                    Something with Profunctors
+                  </div>
+                </div>
 
-            <p>Our summer school is not about making money, it's about spreading Haskell knowledge. Because of that we will cover travel and accommodation costs along with a ticket to the event for speakers.</p>
+                <div class='slot'>
+                  <time>11 - 12</time>
+                  <div class='topic'>
+                    <div class='name'>Julie Moronuki</div>
+                    Something with Profunctors
+                  </div>
+                </div>
+
+                <div class='slot'>
+                  <time>12 - 13</time>
+                  <div class='topic'><div class='name'>Julie Moronuki</div>Something with Profunctors</div>
+                </div>
+
+                <div class='slot'>
+                  <time>13 - 14</time>
+                  <div class='topic'>Lunch Break</div>
+                </div>
+
+                <div class='slot'>
+                  <time>14 - 15</time>
+                  <div class='topic'><div class='name'>Marcin Szamotulski</div>A Category Theory Course</div>
+                </div>
+
+                <div class='slot'>
+                  <time>15 - 16</time>
+                  <div class='topic'><div class='name'>Marcin Szamotulski</div>A Category Theory Course</div>
+                </div>
+
+                <div class='slot'>
+                  <time>16 - 17</time>
+                  <div class='topic'><div class='name'>Michał Kawalec</div>Web Development with Servant and ReasonML</div>
+                </div>
+              </div>
+
+              <div class='col-6 day'>
+                <h4>Advanced track</h4>
+                <div class='slot'>
+                  <time>10 - 11</time>
+                  <div class='topic'>
+                    <div class='name'>Julie Moronuki</div>
+                    Something with Profunctors
+                  </div>
+                </div>
+
+                <div class='slot'>
+                  <time>11 - 12</time>
+                  <div class='topic'>
+                    <div class='name'>Julie Moronuki</div>
+                    Something with Profunctors
+                  </div>
+                </div>
+
+                <div class='slot'>
+                  <time>12 - 13</time>
+                  <div class='topic'><div class='name'>Julie Moronuki</div>Something with Profunctors</div>
+                </div>
+
+                <div class='slot'>
+                  <time>13 - 14</time>
+                  <div class='topic'>Lunch Break</div>
+                </div>
+
+                <div class='slot'>
+                  <time>14 - 15</time>
+                  <div class='topic'><div class='name'>Marcin Szamotulski</div>A Category Theory Course</div>
+                </div>
+
+                <div class='slot'>
+                  <time>15 - 16</time>
+                  <div class='topic'><div class='name'>Marcin Szamotulski</div>A Category Theory Course</div>
+                </div>
+
+                <div class='slot'>
+                  <time>16 - 17</time>
+                  <div class='topic'><div class='name'>Michał Kawalec</div>Web Development with Servant and ReasonML</div>
+                </div>
+              </div>
 
 
-            <h2>
-                <a class="button button-primary" href="https://docs.google.com/forms/d/e/1FAIpQLScKD2T-5m8q4CahA-TBhdMH43ziTPv7op9j4_rcY9bZf_DWRg/viewform?usp=sf_link" target='_blank'>Submit a proposal</a>
-            </h2>
+              <h3 class='day-name spacer'>Tuesday</h3>
+
+              <div class='col-6 day'>
+                <h4>Beginners track</h4>
+                <div class='slot'>
+                  <time>10 - 11</time>
+                  <div class='topic'>
+                    <div class='name'>Julie Moronuki</div>
+                    Something with Profunctors
+                  </div>
+                </div>
+
+                <div class='slot'>
+                  <time>11 - 12</time>
+                  <div class='topic'>
+                    <div class='name'>Julie Moronuki</div>
+                    Something with Profunctors
+                  </div>
+                </div>
+
+                <div class='slot'>
+                  <time>12 - 13</time>
+                  <div class='topic'><div class='name'>Julie Moronuki</div>Something with Profunctors</div>
+                </div>
+
+                <div class='slot'>
+                  <time>13 - 14</time>
+                  <div class='topic'>Lunch Break</div>
+                </div>
+
+                <div class='slot'>
+                  <time>14 - 15</time>
+                  <div class='topic'><div class='name'>Marcin Szamotulski</div>A Category Theory Course</div>
+                </div>
+
+                <div class='slot'>
+                  <time>15 - 16</time>
+                  <div class='topic'><div class='name'>Marcin Szamotulski</div>A Category Theory Course</div>
+                </div>
+
+                <div class='slot'>
+                  <time>16 - 17</time>
+                  <div class='topic'><div class='name'>Michał Kawalec</div>Web Development with Servant and ReasonML</div>
+                </div>
+              </div>
+
+              <div class='col-6 day'>
+                <h4>Advanced track</h4>
+                <div class='slot'>
+                  <time>10 - 11</time>
+                  <div class='topic'>
+                    <div class='name'>Julie Moronuki</div>
+                    Something with Profunctors
+                  </div>
+                </div>
+
+                <div class='slot'>
+                  <time>11 - 12</time>
+                  <div class='topic'>
+                    <div class='name'>Julie Moronuki</div>
+                    Something with Profunctors
+                  </div>
+                </div>
+
+                <div class='slot'>
+                  <time>12 - 13</time>
+                  <div class='topic'><div class='name'>Julie Moronuki</div>Something with Profunctors</div>
+                </div>
+
+                <div class='slot'>
+                  <time>13 - 14</time>
+                  <div class='topic'>Lunch Break</div>
+                </div>
+
+                <div class='slot'>
+                  <time>14 - 15</time>
+                  <div class='topic'><div class='name'>Marcin Szamotulski</div>A Category Theory Course</div>
+                </div>
+
+                <div class='slot'>
+                  <time>15 - 16</time>
+                  <div class='topic'><div class='name'>Marcin Szamotulski</div>A Category Theory Course</div>
+                </div>
+
+                <div class='slot'>
+                  <time>16 - 17</time>
+                  <div class='topic'><div class='name'>Michał Kawalec</div>Web Development with Servant and ReasonML</div>
+                </div>
+              </div>
+            </div>
         </div>
     </div>
     <div class='partners'>
