--- a/src/index.html
+++ b/src/index.html
@@ -257,13 +257,13 @@ The tutorial assumes intermediate familiarity with Haskell, but otherwise requir
                   <div class='topic'><div class='name'>Marcin Szamotulski</div>A Category Theory Course</div>
                 </div>
 
-                <div class='slot'>
+                <div class='slot noborder'>
                   <time>16 - 17</time>
                   <div class='topic'><div class='name'>Michał Kawalec</div>Web Development with Servant and ReasonML</div>
                 </div>
               </div>
 
-              <div class='col-6 day'>
+              <div class='col-6 day advanced'>
                 <h4>Advanced track</h4>
                 <div class='slot'>
                   <time>10 - 11</time>
@@ -301,7 +301,7 @@ The tutorial assumes intermediate familiarity with Haskell, but otherwise requir
                   <div class='topic'><div class='name'>Marcin Szamotulski</div>A Category Theory Course</div>
                 </div>
 
-                <div class='slot'>
+                <div class='slot noborder'>
                   <time>16 - 17</time>
                   <div class='topic'><div class='name'>Michał Kawalec</div>Web Development with Servant and ReasonML</div>
                 </div>
@@ -348,13 +348,13 @@ The tutorial assumes intermediate familiarity with Haskell, but otherwise requir
                   <div class='topic'><div class='name'>Marcin Szamotulski</div>A Category Theory Course</div>
                 </div>
 
-                <div class='slot'>
+                <div class='slot noborder'>
                   <time>16 - 17</time>
                   <div class='topic'><div class='name'>Michał Kawalec</div>Web Development with Servant and ReasonML</div>
                 </div>
               </div>
 
-              <div class='col-6 day'>
+              <div class='col-6 day advanced'>
                 <h4>Advanced track</h4>
                 <div class='slot'>
                   <time>10 - 11</time>
@@ -392,7 +392,7 @@ The tutorial assumes intermediate familiarity with Haskell, but otherwise requir
                   <div class='topic'><div class='name'>Marcin Szamotulski</div>A Category Theory Course</div>
                 </div>
 
-                <div class='slot'>
+                <div class='slot noborder'>
                   <time>16 - 17</time>
                   <div class='topic'><div class='name'>Michał Kawalec</div>Web Development with Servant and ReasonML</div>
                 </div>
