closed CFP and scholarships

--- a/src/index.html
+++ b/src/index.html
@@ -75,10 +75,8 @@
               <h2 class='title left'><span class='first'>S</span>cholarship <span class='second'>P</span>rogramme</h2>
 
               <p>We are deligted to offer a means based scholarship programme. If you are financially unable to attend the summer school, we have a number of fully funded places available. Everything needed for you to attend is covered - travel to the event, accommodation and the ticket itself. The scholarships are provided by <a target='_blank' href='https://x-team.com'>X-Team</a></p>
-            <h4>
-                <a class="button button-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSe33Vjdye8o8XVqC_varG5BzqM0T1Sa5J1-oqogVDSRUhRtJg/viewform" target='_blank'>Apply for a scholarship</a>
-            </h4>
 
+              <p>Scholarship applications are closed now</p>
           </div>
       </div>
 
@@ -218,10 +216,7 @@ The tutorial assumes intermediate familiarity with Haskell, but otherwise requir
 
             <p>Our summer school is not about making money, it's about spreading Haskell knowledge. Because of that we will cover travel and accommodation costs along with a ticket to the event for speakers.</p>
 
-
-            <h2>
-                <a class="button button-primary" href="https://docs.google.com/forms/d/e/1FAIpQLScKD2T-5m8q4CahA-TBhdMH43ziTPv7op9j4_rcY9bZf_DWRg/viewform?usp=sf_link" target='_blank'>Submit a proposal</a>
-            </h2>
+            <p>CFP is closed now, we will release accepted talks mid March</p>
         </div>
     </div>
     <div class='partners'>
