--- a/src/index.html
+++ b/src/index.html
@@ -330,7 +330,7 @@ some of Azure offerings for more complex scenarios.
                 <h3 class='name'><span class='first'>R</span>yan <span class='second'>M</span>oore</h3>
                 <h4>From NAND To Lambda: Foundational Computing from Functional Principles</h4>
                 <div class='bio'>
-                    My talk will be a series of mixed lectures with workshops that will introduce students to fundamental concepts of computer hardware using Haskell!  This sounds like a heavy duty course, and it is, but I will break down these concepts into approachable pieces with a logical progression from basic logic gates to parsing a simple assembly language! It is heavily inspired by this <a href='http://nand2tetris.org'>Nand to Tetris</a> course, but will present the concepts through the lens (pun only slightly intended) of Haskell programming, rather than the imperative programming that is taught through much of the course.
+                  My talk will be a series of mixed lectures with workshops that will introduce students to fundamental concepts of computer hardware using Haskell!  This sounds like a heavy duty course, and it is, but I will break down these concepts into approachable pieces with a logical progression from basic logic gates to parsing a simple assembly language! It is heavily inspired by this <a href='http://nand2tetris.org'>Nand to Tetris</a> course, but will present the concepts through the lens (pun only slightly intended) of Haskell programming, rather than the imperative programming that is taught through much of the course.
                 </div>
             </div>
 
@@ -553,7 +553,7 @@ Basic coding skills (in any programming language) are required. However, no know
                   <time>10 - 11</time>
                   <div class='topic'>
                     <div class='name'>Krzysztof Gogolewski</div>
-                    A Not So Gentle Introduction to Programming with Linear Dependent Types
+                    An Introduction to Dependent Types
                   </div>
                 </div>
 
@@ -561,7 +561,7 @@ Basic coding skills (in any programming language) are required. However, no know
                   <time>11 - 12</time>
                   <div class='topic'>
                     <div class='name'>Krzysztof Gogolewski</div>
-                    A Not So Gentle Introduction to Programming with Linear Dependent Types
+                    An Introduction to Dependent Types
                   </div>
                 </div>
 
@@ -714,7 +714,7 @@ Basic coding skills (in any programming language) are required. However, no know
                   <time>15 - 16</time>
                   <div class='topic'>
                     <div class='name'>Krzysztof Gogolewski</div>
-                    A Not So Gentle Introduction to Programming with Linear Dependent Types
+                    An Introduction to Dependent Types
                   </div>
                 </div>
 
@@ -722,7 +722,7 @@ Basic coding skills (in any programming language) are required. However, no know
                   <time>16 - 17</time>
                   <div class='topic'>
                     <div class='name'>Krzysztof Gogolewski</div>
-                    A Not So Gentle Introduction to Programming with Linear Dependent Types
+                    An Introduction to Dependent Types
                   </div>
                 </div>
               </div>
