--- a/src/index.html
+++ b/src/index.html
@@ -185,7 +185,7 @@ I volunteer as a curriculum designer, course organizer and teacher for refugees.
                     <img src='/static/fgralinski.jpg' />
                     <h3 class='name'><span class='first'>F</span>ilip <span class='second'>G</span>raliński</h3>
                     <div class='bio'>
-                        I do research in natural language processing and machine learning. By day, I am an computer science assistant professor at Adam Mickiewicz University in Poznań and by night I am an amateur folklorist, combing old newspapers for bizarre stories and urban legends. I've been learning Haskell for a couple of years, happily recovering from 6502 machine code, C++ and Perl.
+                        I do research in natural language processing and machine learning. By day, I am a computer science assistant professor at Adam Mickiewicz University in Poznań and by night I am an amateur folklorist, combing old newspapers for bizarre stories and urban legends. I've been learning Haskell for a couple of years, happily recovering from 6502 machine code, C++ and Perl.
                     </div>
                 </div>
 
@@ -346,7 +346,7 @@ some of Azure offerings for more complex scenarios.
                 <h3 class='name'><span class='first'>F</span>ilip <span class='second'>G</span>raliński</h3>
                 <h4>Really Real-World Haskell (for Machine Learning Evaluation)</h4>
                 <div class='bio'>
-                    In this series of workshops, you'll help me to develop cool features for Gonito.net, an open-source platform for machine learning competitions, and GEval, its companion command-line tool for evaluating machine learning systems -- real stuff to be used by Machine Learning people (not necessarily Haskellers). I want you to see how easy and fun Haskell programming can be (with the right
+                    In this series of workshops, you'll help me to develop cool features for Gonito.net, an open-source platform for machine learning competitions, and GEval, its companion command-line tool for evaluating machine learning systems — real stuff to be used by Machine Learning people (not necessarily Haskellers). I want you to see how easy and fun Haskell programming can be (with the right
 abstractions). We will cover things useful in practise (error handling, Web applications, conduits, database programming, monadic parsing, handling command-line options), which will take you from zero knowledge of Haskell straight to the intermediate level.
 
 Basic coding skills (in any programming language) are required. However, no knowledge of machine learning is needed (actually, you will learn its titbits, as a by-product of this course).
