changed Sydney's name ;)

--- a/src/index.html
+++ b/src/index.html
@@ -144,7 +144,7 @@ blockchain technology.
             <div class='row'>
                 <div class='col-4 column'>
                     <img src='/static/tom.jpg' />
-                    <h3 class='name'><span class='first'>T</span>om <span class='second'>K</span>erckhove</h3>
+                    <h3 class='name'><span class='first'>T</span>om Sydney <span class='second'>K</span>erckhove</h3>
                     <div class='bio'>
                         I have been working on testing for years, have done research in it, and am now working at FPComplete doing more testing.
                         More <a href='https://cs-syd.eu'>about me here</a>.
@@ -293,7 +293,7 @@ Software Transactional Memory makes techniques pioneered in relational databases
 
         <div class='row'>
             <div class='col-4 column'>
-                <h3 class='name'><span class='first'>T</span>om <span class='second'>K</span>erckhove</h3>
+                <h3 class='name'><span class='first'>T</span>om Sydney <span class='second'>K</span>erckhove</h3>
                 <h4>Testing for beginners</h4>
                 <div class='bio'>
                     The talks will form a complete introduction to testing in Haskell. They will cover the different kinds of tests, and how to write them in Haskell, best practices and generators and their best practices. It will be a combination of lectures and hands-on workshops.
@@ -640,7 +640,7 @@ Basic coding skills (in any programming language) are required. However, no know
                 <div class='slot'>
                   <time>14 - 15</time>
                   <div class='topic'>
-                    <div class='name'>Tom Kerckhove</div>
+                    <div class='name'>Tom Sydney Kerckhove</div>
                     Testing for beginners
                   </div>
                 </div>
@@ -648,7 +648,7 @@ Basic coding skills (in any programming language) are required. However, no know
                 <div class='slot'>
                   <time>15 - 16</time>
                   <div class='topic'>
-                    <div class='name'>Tom Kerckhove</div>
+                    <div class='name'>Tom Sydney Kerckhove</div>
                     Testing for beginners
                   </div>
                 </div>
@@ -734,7 +734,7 @@ Basic coding skills (in any programming language) are required. However, no know
                   <time>10 - 11</time>
 
                   <div class='topic'>
-                    <div class='name'>Tom Kerckhove</div>
+                    <div class='name'>Tom Sydney Kerckhove</div>
                     Testing for beginners
                   </div>
                 </div>
@@ -742,7 +742,7 @@ Basic coding skills (in any programming language) are required. However, no know
                 <div class='slot'>
                   <time>11 - 12</time>
                   <div class='topic'>
-                    <div class='name'>Tom Kerckhove</div>
+                    <div class='name'>Tom Sydney Kerckhove</div>
                     Testing for beginners
                   </div>
                 </div>
@@ -849,7 +849,7 @@ Basic coding skills (in any programming language) are required. However, no know
                   <time>10 - 11</time>
 
                   <div class='topic'>
-                    <div class='name'>Tom Kerckhove</div>
+                    <div class='name'>Tom Sydney Kerckhove</div>
                     Testing for beginners
                   </div>
                 </div>
@@ -857,7 +857,7 @@ Basic coding skills (in any programming language) are required. However, no know
                 <div class='slot'>
                   <time>11 - 12</time>
                   <div class='topic'>
-                    <div class='name'>Tom Kerckhove</div>
+                    <div class='name'>Tom Sydney Kerckhove</div>
                     Testing for beginners
                   </div>
                 </div>
