added a code of conduct

--- a/src/index.html
+++ b/src/index.html
@@ -1006,6 +1006,19 @@ Basic coding skills (in any programming language) are required. However, no know
         </div>
     </div>
 
+    <div id='coc'>
+        <div class='container'>
+          <div class='row'>
+
+            <div class='col-12 column'>
+            <h2>Code of Conduct</h2>
+
+            We are following the <a href='https://berlincodeofconduct.org/'>Berlin Code of Conduct</a>. If you ever feel it has been breached, do not hesitate to contact one of the organizers.
+            </div>
+          </div>
+        </div>
+    </div>
+
     <script src='/main.js'></script>
   </body>
 </html>
