added the Carters talk

--- a/src/index.html
+++ b/src/index.html
@@ -356,6 +356,24 @@ Basic coding skills (in any programming language) are required. However, no know
 
           </div>
 
+          <div class='row'>
+
+            <div class='col-4 column'>
+                <h3 class='name'><span class='first'>C</span>arter <span class='second'>S</span>chonwald</h3>
+                <h4>Modeling protocols with linear dependent types</h4>
+                <div class='bio'>
+                  Learn how concurrent functional programming is exactly a proof language for full linear logic, fancy protocol modeling  using coinductive programming, along with first class ownership and authorization.
+Example modeling will span replication algorithms, various  authorization models, library books, pen&paper rpg systems,
+and some of the more elementary financial/business structures that usually lack good abstractions! Also try out your own modelling and learn how its implemented!
+
+participants should be comfortable with gadts, concurrent haskell programming, and writing code in Agda or a similar proof assistant. Compiler hacking or immature PL implementation experimentation a plus :)
+
+This sequence synthesizes several years of industrial research towards building the tools we wish "blockchain" actually was! :)
+                </div>
+            </div>
+          </div>
+
+
         </div>
       </div>
     </div>
@@ -444,7 +462,7 @@ Basic coding skills (in any programming language) are required. However, no know
                   <time>10 - 11</time>
                   <div class='topic'>
                     <div class='name'>Carter Schonwald</div>
-                    A Not So Gentle Introduction to Programming with Linear Dependent Types
+                    Modeling protocols with linear dependent types
                   </div>
                 </div>
 
@@ -452,7 +470,7 @@ Basic coding skills (in any programming language) are required. However, no know
                   <time>11 - 12</time>
                   <div class='topic'>
                     <div class='name'>Carter Schonwald</div>
-                    A Not So Gentle Introduction to Programming with Linear Dependent Types
+                    Modeling protocols with linear dependent types
                   </div>
                 </div>
 
@@ -590,7 +608,7 @@ Basic coding skills (in any programming language) are required. However, no know
                   <time>15 - 16</time>
                   <div class='topic'>
                     <div class='name'>Carter Schonwald</div>
-                    A Not So Gentle Introduction to Programming with Linear Dependent Types
+                    Modeling protocols with linear dependent types
                   </div>
                 </div>
 
@@ -598,7 +616,7 @@ Basic coding skills (in any programming language) are required. However, no know
                   <time>16 - 17</time>
                   <div class='topic'>
                     <div class='name'>Carter Schonwald</div>
-                    A Not So Gentle Introduction to Programming with Linear Dependent Types
+                    Modeling protocols with linear dependent types
                   </div>
                 </div>
               </div>
